--- a/assets/scss/03-components/_c-navbar.scss
+++ b/assets/scss/03-components/_c-navbar.scss
@@ -169,7 +169,7 @@
 
     &.nuxt-link-active {
       color: $text-color-dark;
-      font-weight: bold;
+      // font-weight: bold;
 
       &::after {
         transform: scaleX(1);
